Fixed Socialmedia Icons on Mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -177,6 +177,64 @@
   }
 }
 
+.app__right{
+  
+   @media screen and (min-width: 625px) {
+       display: none;
+   }
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 55px;
+  position: fixed;
+  top: 35vh;
+  left: 82%;
+
+  div {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--white-color);
+    margin: 0.25rem 0;
+    border: 1px solid var(--lightGray-color);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: all 0.3s ease-in-out;
+
+    svg {
+      width: 15px;
+      height: 15px;
+      color: var(--gray-color);
+    }
+
+    &:hover {
+      background-color: var(--secondary-color);
+      border-color: var(--secondary-color);
+
+      svg {
+        color: var(--white-color);
+      }
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 64px;
+      height: 46px;
+      margin: 0.5rem 1rem;
+
+      svg {
+        width: 23px;
+        height: 30px;
+      }
+    }
+  }
+}
+
 
 
 
